fix double borders

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -74,7 +74,6 @@ td {
 
 thead tr th {
     font-weight: bold;
-    text-align: center;
     background-color: $color-green-highlightBG;
 }
 
